# QCPortal

./: .travis.yml  LICENSE  MANIFEST.in  README.md  pyproject.toml  setup.cfg  setup.py
.github/: CONTRIBUTING.md  PULL_REQUEST_TEMPLATE.md
.github/workflows/: CI.yml  build_docs.yml  tests.yml
devtools/: README.md
devtools/conda-envs/: README.md  base.yaml  dev_head.yaml  openff.yaml
devtools/conda-recipe/: meta.yaml
devtools/travis-ci/: before_install.sh
docs/: Makefile  README.md  conf.py  index.rst  make.bat
docs/source/: conf.py
qcportal/: __init__.py  _version.py  qcportal.py
qcportal/collections/: dataset.py
qcportal/datasets/optimization/: models.py
qcportal/tests/: test_qcportal.py
tests/: __init__.py
