[build-system]
requires = ["setuptools>=61.0", "versioningit"]
build-backend = "setuptools.build_meta"

[project]
name = "qcportal"
dynamic = ["version"]
authors = [
  { name="Benjamin Pritchard", email="qcarchive@molssi.org" },
]
description = "A distributed compute and database platform for quantum chemistry."
readme = "README.md"
license = { file="LICENSE" }
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "Operating System :: POSIX :: Linux",
    "Operating System :: MacOS",
]
dependencies = [
    "numpy",
    "msgpack",
    "requests",
    "pyyaml",
    "pydantic",
    "qcelemental",
    "tabulate",
    "tqdm",
    "pandas",
]

[project.optional-dependencies]
lint = [
    "black"
]


[project.urls]
"Homepage" = "https://github.com/MolSSI/QCPortal"
"Bug Tracker" = "https://github.com/MolSSI/QCPortal/issues"

[tool.setuptools]
packages = ["qcportal"]

[tool.versioningit]

[tool.versioningit.vcs]
default-tag = "0.0.99" # useful for CI/shallow clones

[tool.black]
line-length = 120
